2008/04/07

	31. Adaptation to KPP version 2.04.500.
	30. Correction of numerous warnings in documentation generation.

2008/04/04      kwsPlus release 1.3

        29. Added steering method factories.
        28. Added class CflicDistance that provides an approximation of
            the length of flic direct path between two configurations.
        27. Moved static functions of flicDirectPath.cpp into a class
            CflicManager in order to use these functions in other files.
        26. Added CkwsPlusDistance class. Enable user to use other types
            of steering method for calculating distance.
        25. Added CkwsPlusRoadmap class. Enable user to remove a set of
            nodes and a set of edges from a roadmap.

2008/02/18      kwsPlus release 1.2
	
        24. In flicDirectPath, curvature bound is enforced at the creation
            of the direct path.
        23. Added CkwsPlusLTRdmBuilder class. Derives from any diffusing
            roadmap builder class and implements a local tree diffusing
            method.
        22. Added CkwsPlusPCARdmBuilder class. Derives from any diffusing
            roadmap builder class and implements a principal component
            analysis to speed up the diffusion process. Needs lapack
            installed.
        21. Remove unused classes kwsPlusRoadmap and
            kwsPlusDrawRdmBuilderDelegate
        20. Minor Changes
        19. Merge with git+ssh://softs.laas.fr/git/jrl/kwsPlus
        18. Correct the reeds&sheppDirectPath Class :
              - is now derivated from kwsPlusDirectPath
              - you can acess to uStart and uEnd parameters which are
                configurated with extractTo and extractFrom
              - when you get the RSvectorPartition is now taking count of
                the uStart and uEnd extracting parameters
        17. Added a class to test whether a configuration constraint is
            continuous and is a projection.