@@ -1,3 +1,7 @@
+2008/04/17
+	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
+	32. Removed unitTesting program to test projection constraint.
+	
 2008/04/07
 
 	31. Adaptation to KPP version 2.04.500.
